Fixed color contrast accesibility issues acording to WCAG 2.1 AA SC 1.4.3 Test for Color Contrast

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -146,7 +146,7 @@
 
 	a {
 		text-decoration: underline;
-		color: #19B5FE;
+		color: #015C89;
 	}
 
 		a:hover {
@@ -317,7 +317,7 @@
 		-webkit-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
 		-ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
 		transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
-		background: #86898b; /*#19B5FE;*/
+		background: #585858; /*#86898b;*/
 		color: #FFF;
 		border-radius: 4px;
 		border: 0;
@@ -564,7 +564,7 @@
 		-ms-appearance: none;
 		appearance: none;
 		border-radius: 4px;
-		border: solid 1px rgba(25, 181, 254, 0.25);
+		border: solid 1px #d3d3d3;
 		color: inherit;
 		display: block;
 		outline: 0;
@@ -590,7 +590,7 @@
 		select:focus,
 		textarea:active,
 		textarea:focus {
-			border: solid 1px #19B5FE;
+			border: solid 1px #015C89;
 		}
 
 	.select-wrapper {
@@ -1581,7 +1581,7 @@
 /* Main */
 
 	#main {
-		background: #f1f1f1;
+		background: #fff; /*f1f1f1*/
 		width: 100%;
 	}
 
@@ -1775,7 +1775,7 @@
 	}
 
 		#footer .copyright {
-			color: #bfbfbf;
+			color: #585858;
 			font-size: 0.9em;
 			padding: 0 1em;
 			text-align: center;
